implement get top users endpoint
